Se agregó la correlación entre el ratio likes y dislikes, y la columna likes

--- a/Proyecto/Analisis.ipynb
+++ b/Proyecto/Analisis.ipynb
@@ -524,6 +524,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "23d66e6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# correlacion entre los likes y el ratio entre likes y dislikes\n",
+    "df[\"ratio\"] = np.where(df['dislikes'] != 0, df['likes'] / df['dislikes'], np.nan)\n",
+    "df_n = df.fillna({\"ratio\":df[\"ratio\"].median()})\n",
+    "df = df_n\n",
+    "print(df_n[\"ratio\"].corr(df_n[\"likes\"]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "02dcb080",
    "metadata": {},
